# nostr-tools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  SECURITY.md  note.txt  note2.txt  note3.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/workflows/: ci.yml  docs.yml  maintenance.yml  publish.yml  test.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_autosummary/: nostr_tools.Client.rst  nostr_tools.Event.rst  nostr_tools.Filter.rst  nostr_tools.Relay.rst  nostr_tools.RelayConnectionError.rst  nostr_tools.RelayMetadata.rst  nostr_tools.calc_event_id.rst  nostr_tools.check_connectivity.rst  nostr_tools.check_readability.rst  nostr_tools.check_writability.rst  nostr_tools.compute_relay_metadata.rst  nostr_tools.fetch_connection.rst  nostr_tools.fetch_events.rst  nostr_tools.fetch_nip11.rst  nostr_tools.find_websocket_relay_urls.rst  nostr_tools.generate_event.rst  nostr_tools.generate_keypair.rst  nostr_tools.parse_connection_response.rst  nostr_tools.parse_nip11_response.rst  nostr_tools.sanitize.rst  nostr_tools.sig_event_id.rst  nostr_tools.stream_events.rst  nostr_tools.to_bech32.rst  nostr_tools.to_hex.rst  nostr_tools.validate_keypair.rst  nostr_tools.verify_sig.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: index.doctree
docs/_build/html/.doctrees/_autosummary/: nostr_tools.Client.doctree  nostr_tools.Event.doctree  nostr_tools.Filter.doctree  nostr_tools.Relay.doctree  nostr_tools.RelayConnectionError.doctree  nostr_tools.RelayMetadata.doctree  nostr_tools.calc_event_id.doctree  nostr_tools.check_connectivity.doctree  nostr_tools.check_readability.doctree  nostr_tools.check_writability.doctree  nostr_tools.compute_relay_metadata.doctree  nostr_tools.fetch_connection.doctree  nostr_tools.fetch_events.doctree  nostr_tools.fetch_nip11.doctree  nostr_tools.find_websocket_relay_urls.doctree  nostr_tools.generate_event.doctree  nostr_tools.generate_keypair.doctree  nostr_tools.parse_connection_response.doctree  nostr_tools.parse_nip11_response.doctree  nostr_tools.sanitize.doctree  nostr_tools.sig_event_id.doctree  nostr_tools.stream_events.doctree  nostr_tools.to_bech32.doctree  nostr_tools.to_hex.doctree  nostr_tools.validate_keypair.doctree  nostr_tools.verify_sig.doctree
docs/_build/html/_autosummary/: nostr_tools.Client.html  nostr_tools.Event.html  nostr_tools.Filter.html  nostr_tools.Relay.html  nostr_tools.RelayConnectionError.html  nostr_tools.RelayMetadata.html  nostr_tools.calc_event_id.html  nostr_tools.check_connectivity.html  nostr_tools.check_readability.html  nostr_tools.check_writability.html  nostr_tools.compute_relay_metadata.html  nostr_tools.fetch_connection.html  nostr_tools.fetch_events.html  nostr_tools.fetch_nip11.html  nostr_tools.find_websocket_relay_urls.html  nostr_tools.generate_event.html  nostr_tools.generate_keypair.html  nostr_tools.parse_connection_response.html  nostr_tools.parse_nip11_response.html  nostr_tools.sanitize.html  nostr_tools.sig_event_id.html  nostr_tools.stream_events.html  nostr_tools.to_bech32.html  nostr_tools.to_hex.html  nostr_tools.validate_keypair.html  nostr_tools.verify_sig.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/nostr_tools/actions/: actions.html
docs/_build/html/_modules/nostr_tools/core/: client.html  event.html  filter.html  relay.html  relay_metadata.html
docs/_build/html/_modules/nostr_tools/exceptions/: errors.html
docs/_build/html/_modules/nostr_tools/utils/: utils.html
docs/_build/html/_sources/_autosummary/: nostr_tools.Client.rst.txt  nostr_tools.Event.rst.txt  nostr_tools.Filter.rst.txt  nostr_tools.RelayConnectionError.rst.txt  nostr_tools.RelayMetadata.rst.txt  nostr_tools.check_connectivity.rst.txt  nostr_tools.check_readability.rst.txt  nostr_tools.check_writability.rst.txt  nostr_tools.compute_relay_metadata.rst.txt  nostr_tools.fetch_connection.rst.txt  nostr_tools.generate_keypair.rst.txt  nostr_tools.parse_nip11_response.rst.txt  nostr_tools.sig_event_id.rst.txt  nostr_tools.stream_events.rst.txt  nostr_tools.validate_keypair.rst.txt
docs/_build/html/_static/: custom.css
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst
docs/api/: index.rst
examples/: 01_getting_started.py  03_publishing_and_subscribing.py  05_proof_of_work.py  06_streaming_and_advanced.py  advanced_features.py  advenced_features.py  basic_usage.py  event_fetching.py  relay_discovery.py
nostr_tools/: __init__.py  py.typed
nostr_tools/actions/: __init__.py  actions.py
nostr_tools/client/: __init__.py  event_fetcher.py  websocket_client.py
nostr_tools/core/: __init__.py  client.py  event.py  filter.py  relay.py  relay_metadata.py
nostr_tools/exceptions/: __init__.py  errors.py
nostr_tools/utils/: __init__.py  crypto.py  network.py  utils.py  validation.py
releases/: README.md  v1.0.0.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.2.1.md
src/bigbrotr/: __init__.py  bigbrotr.py  event.py  relay.py  relay_metadata.py  utils.py
src/nostr-tools/: __init__.py
src/nostr_tools/: __init__.py  _version.py
src/nostr_tools/actions/: actions.py
src/nostr_tools/core/: client.py  event.py  filter.py  relay.py  relay_metadata.py
src/nostr_tools/exceptions/: errors.py
src/nostr_tools/utils/: __init__.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_integration.py  test_package.py  test_performance.py  test_security.py
tests/integration/: __init__.py  test_actions.py
tests/unit/: __init__.py  test_actions.py  test_client.py  test_coverage_boost.py  test_event.py  test_exceptions.py  test_filter.py  test_relay.py  test_relay_metadata.py  test_utils.py
