[metadata]
name = nostr-tools
version = 0.1.0
description = A comprehensive Python library for Nostr protocol interactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigbrotr/nostr-tools
author = Bigbrotr
author_email = hello@bigbrotr.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
    Topic :: Communications
    Topic :: Security :: Cryptography
    Framework :: AsyncIO

[options]
packages = find:
python_requires = >=3.8
install_requires =
    bech32==1.2.0
    secp256k1==0.14.0
    aiohttp>=3.11.18
    aiohttp_socks>=0.10.1
    typing-extensions>=4.0.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
docs =
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0
    sphinx-autodoc-typehints>=1.19.0
test =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info,
    .pytest_cache,
    .mypy_cache
per-file-ignores =
    __init__.py:F401
    tests/*:F401,F811

# Additional tool configurations
[bdist_wheel]
universal = 0